tests/errors/err_has_constraint_op.mix
// ERROR: does not satisfy constraint '+'
shape Color
    r: int
    g: int
    b: int

@T has +
sum2(xs: [T]) -> T
    xs[0] + xs[1]

main()
    cs = [Color(r: 1, g: 2, b: 3), Color(r: 4, g: 5, b: 6)]
    sum2(cs)
